@@ -1,3 +1,14 @@
+2008-07-16  Sankar P  <psankar@novell.com>
+
+	Pushing changes that are necessary for disk-summary to work. 
+
+	* camel/camel-exchange-folder.c (class_init),
+	(camel_exchange_folder_construct), (exchange_sync):
+	* camel/camel-exchange-summary.c (exchange_summary_class_init),
+	(camel_exchange_summary_new), (summary_header_from_db),
+	(summary_header_to_db), (message_info_from_db),
+	(message_info_load), (message_info_to_db):
+
 2008-06-30  Matthew Barnes  <mbarnes@redhat.com>
 
 	* configure.in:
